<resources>
    <string name="app_name">Food Diary</string>
    <string name="settings">Settings</string>

    <string name="restaurants">Restaurants</string>
    <string name="check_ins">Check-Ins</string>
    <string name="favorites">Favorites</string>

    <string name="upload_from_gallery">Upload from gallery</string>

    <string name="choose_image_from">Choose image from</string>
    <string name="image_file_failed">Unable to create a file to save your dish picture to.</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="choose">Choose</string>

    <string name="please_rate">
        Hey, it looks like you\'re a frequent user of Food Diary!
        If you have a couple seconds, please rate this app in the Play Store.
        Every rating goes a long way towards motivating me to continue improving this app!
    </string>
    <string name="will_rate">Sure, I\'ll help</string>
    <string name="no_im_good">No, I\'m good</string>

    <string name="filter">Filter</string>

    <string name="close_icon">{ion-android-close}</string>
    <string name="overflow_icon">{ion-android-more-vertical}</string>
    <string name="heart_icon">{ion-ios-heart-outline}</string>
    <string name="share_icon">{ion-android-share-alt}</string>
    <string name="tagging_icon">{ion-ios-pricetags}</string>
    <string name="photos_icon">{ion-images}</string>
    <string name="edit_icon">{ion-edit}</string>

    <!-- Bottom navigation icons -->
    <string name="home_icon">{ion-android-home}</string>
    <string name="search_icon">{ion-android-search}</string>
    <string name="camera_icon">{ion-android-camera}</string>
    <string name="heart_filled_icon">{ion-ios-heart}</string>
    <string name="user_icon">{ion-person}</string>

    <string name="confirm_form_exit">
        Are you sure you want to leave? Any unsaved changes will be lost.
    </string>
    <string name="image_load_fail">Failed to load image.</string>

    <string name="back_icon">{ion-android-arrow-back}</string>

    <string name="no_favorites">
        Hit {ion-ios-heart-outline} for any dish to favorite it!
    </string>

    <string name="restaurant_icon">{ion-android-restaurant}</string>
    <string name="check_in_icon">{ion-android-checkmark-circle}</string>
</resources>
