<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <View
        android:layout_above="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/bottom_nav_shadow"/>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/home"
            android:text="@string/home_icon"
            style="@style/bottom_navigation_item"/>

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/search"
            android:text="@string/search_icon"
            style="@style/bottom_navigation_item"/>

        <FrameLayout
            android:id="@+id/camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/camera_circle"
                android:text="@string/camera_icon"
                android:textColor="@color/white"
                android:textSize="24dp"/>
        </FrameLayout>

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/favorites"
            android:text="@string/heart_filled_icon"
            style="@style/bottom_navigation_item"/>

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/profile"
            android:text="@string/user_icon"
            style="@style/bottom_navigation_item"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_above="@id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
