<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/total_stats"
        android:layout_below="@id/toolbar"
        style="@style/stat_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/dish_icon"
                    android:textColor="@color/app_red"
                    style="@style/profile_stat_icon"/>
                
                <TextView
                    android:id="@+id/total_dishes_text"
                    style="@style/profile_stat_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/restaurant_icon"
                    android:textColor="@color/gray"
                    style="@style/profile_stat_icon"/>

                <TextView
                    android:id="@+id/total_restaurants_text"
                    style="@style/profile_stat_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/check_in_icon"
                    android:textColor="@color/blue"
                    style="@style/profile_stat_icon"/>

                <TextView
                    android:id="@+id/total_check_ins_text"
                    style="@style/profile_stat_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/heart_filled_icon"
                    android:textColor="@color/light_red"
                    style="@style/profile_stat_icon"/>

                <TextView
                    android:id="@+id/total_favorites_text"
                    style="@style/profile_stat_text"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/toolbar"
        android:background="@drawable/toolbar_shadow"/>
</RelativeLayout>
